--- a/lib/ui/main.ui
+++ b/lib/ui/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>802</width>
     <height>600</height>
    </rect>
   </property>
@@ -103,7 +103,7 @@
            </attribute>
            <layout class="QVBoxLayout" name="verticalLayout_4">
             <item>
-             <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0">
+             <layout class="QGridLayout" name="matrix" rowstretch="0,0">
               <item row="0" column="0">
                <widget class="QPushButton" name="pushButton_5">
                 <property name="sizePolicy">
@@ -335,7 +335,7 @@
             <string/>
            </property>
            <property name="pixmap">
-            <pixmap>icons/adjacent.png</pixmap>
+            <pixmap resource="res.qrc">:/icons/icons/adjacent.png</pixmap>
            </property>
           </widget>
          </item>
@@ -351,7 +351,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>802</width>
      <height>21</height>
     </rect>
    </property>
