--- a/lib/ui/main.ui
+++ b/lib/ui/main.ui
@@ -48,6 +48,12 @@
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QTabWidget" name="PropertiesPanel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
           <property name="styleSheet">
            <string notr="true"/>
           </property>
@@ -306,7 +312,7 @@
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>0</y>
+                 <y>-300</y>
                  <width>686</width>
                  <height>818</height>
                 </rect>
@@ -429,7 +435,7 @@
                      <item>
                       <widget class="QLabel" name="label_4">
                        <property name="text">
-                        <string>Line Color:</string>
+                        <string>Color:</string>
                        </property>
                        <property name="alignment">
                         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -445,7 +451,9 @@
                         <bool>false</bool>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">background-color: #ff5555;</string>
+                        <string notr="true">background-color: #ff5555;
+selection-color:rgb(254, 254, 254);
+selection-background-color: rgb(2, 2, 2);</string>
                        </property>
                        <property name="maximum">
                         <number>255</number>
@@ -458,7 +466,9 @@
                      <item>
                       <widget class="QSpinBox" name="lineColorG">
                        <property name="styleSheet">
-                        <string notr="true">background-color: #55ff55;</string>
+                        <string notr="true">background-color: #55ff55;
+selection-color:rgb(254, 254, 254);
+selection-background-color: rgb(2, 2, 2);</string>
                        </property>
                        <property name="maximum">
                         <number>255</number>
@@ -471,7 +481,9 @@
                      <item>
                       <widget class="QSpinBox" name="lineColorB">
                        <property name="styleSheet">
-                        <string notr="true">background-color: #5555ff;</string>
+                        <string notr="true">background-color: #5555ff;
+selection-color:rgb(254, 254, 254);
+selection-background-color: rgb(2, 2, 2);</string>
                        </property>
                        <property name="maximum">
                         <number>255</number>
@@ -552,7 +564,7 @@
           <x>0</x>
           <y>0</y>
           <width>530</width>
-          <height>619</height>
+          <height>629</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -579,7 +591,7 @@
      <x>0</x>
      <y>0</y>
      <width>1276</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
