Added save functionality and improved looks

--- a/lib/ui/main.ui
+++ b/lib/ui/main.ui
@@ -11,7 +11,10 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>TriangleAdjacencyMatrix</string>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonFollowStyle</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="styleSheet">
@@ -312,9 +315,9 @@
                <property name="geometry">
                 <rect>
                  <x>0</x>
-                 <y>-300</y>
+                 <y>-216</y>
                  <width>686</width>
-                 <height>818</height>
+                 <height>1018</height>
                 </rect>
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -329,7 +332,7 @@
                   <property name="minimumSize">
                    <size>
                     <width>20</width>
-                    <height>800</height>
+                    <height>1000</height>
                    </size>
                   </property>
                   <property name="frameShape">
@@ -447,12 +450,19 @@
                      </item>
                      <item>
                       <widget class="QSpinBox" name="lineColorR">
+                       <property name="sizePolicy">
+                        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                        </sizepolicy>
+                       </property>
                        <property name="mouseTracking">
                         <bool>false</bool>
                        </property>
                        <property name="styleSheet">
-                        <string notr="true">background-color: #ff5555;
-selection-color:rgb(254, 254, 254);
+                        <string notr="true">color: rgb(2, 2, 2);
+background-color: #ff5555;
+selection-color: rgb(254, 254, 254);
 selection-background-color: rgb(2, 2, 2);</string>
                        </property>
                        <property name="maximum">
@@ -466,8 +476,9 @@ selection-background-color: rgb(2, 2, 2);</string>
                      <item>
                       <widget class="QSpinBox" name="lineColorG">
                        <property name="styleSheet">
-                        <string notr="true">background-color: #55ff55;
-selection-color:rgb(254, 254, 254);
+                        <string notr="true">color: rgb(2, 2, 2);
+background-color: #55ff55;
+selection-color: rgb(254, 254, 254);
 selection-background-color: rgb(2, 2, 2);</string>
                        </property>
                        <property name="maximum">
@@ -481,8 +492,9 @@ selection-background-color: rgb(2, 2, 2);</string>
                      <item>
                       <widget class="QSpinBox" name="lineColorB">
                        <property name="styleSheet">
-                        <string notr="true">background-color: #5555ff;
-selection-color:rgb(254, 254, 254);
+                        <string notr="true">color: rgb(2, 2, 2);
+background-color: #5555ff;
+selection-color: rgb(254, 254, 254);
 selection-background-color: rgb(2, 2, 2);</string>
                        </property>
                        <property name="maximum">
@@ -534,9 +546,9 @@ selection-background-color: rgb(2, 2, 2);</string>
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="saveBtn">
+         <widget class="QPushButton" name="exportBtn">
           <property name="text">
-           <string>SAVE</string>
+           <string>EXPORT</string>
           </property>
          </widget>
         </item>
@@ -598,23 +610,44 @@ selection-background-color: rgb(2, 2, 2);</string>
     <property name="title">
      <string>File</string>
     </property>
+    <addaction name="actionNew"/>
+    <addaction name="actionOpen"/>
+    <addaction name="separator"/>
     <addaction name="actionSave"/>
+    <addaction name="actionExport"/>
+    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuThem">
     <property name="title">
      <string>Theme</string>
     </property>
+    <property name="separatorsCollapsible">
+     <bool>false</bool>
+    </property>
     <addaction name="actionDark"/>
     <addaction name="actionLight"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionSbout"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuThem"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionSave">
    <property name="text">
     <string>Save</string>
+   </property>
+   <property name="toolTip">
+    <string>Save Matrix</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
   <action name="actionExit">
@@ -632,6 +665,18 @@ selection-background-color: rgb(2, 2, 2);</string>
    <property name="text">
     <string>Dark</string>
    </property>
+   <property name="autoRepeat">
+    <bool>true</bool>
+   </property>
+   <property name="visible">
+    <bool>true</bool>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>true</bool>
+   </property>
+   <property name="shortcutVisibleInContextMenu">
+    <bool>true</bool>
+   </property>
   </action>
   <action name="actionLight">
    <property name="checkable">
@@ -639,6 +684,44 @@ selection-background-color: rgb(2, 2, 2);</string>
    </property>
    <property name="text">
     <string>Light</string>
+   </property>
+   <property name="iconVisibleInMenu">
+    <bool>true</bool>
+   </property>
+   <property name="shortcutVisibleInContextMenu">
+    <bool>true</bool>
+   </property>
+  </action>
+  <action name="actionExport">
+   <property name="text">
+    <string>Export</string>
+   </property>
+   <property name="toolTip">
+    <string>Export Png</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
+   </property>
+  </action>
+  <action name="actionNew">
+   <property name="text">
+    <string>New</string>
+   </property>
+   <property name="toolTip">
+    <string>New Matrix</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
+  </action>
+  <action name="actionSbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionOpen">
+   <property name="text">
+    <string>Open</string>
    </property>
   </action>
  </widget>
